wrap avatar content and fix focus styling

--- a/src/avatar/styles.scss
+++ b/src/avatar/styles.scss
@@ -12,14 +12,10 @@ $avatar-size: 28px;
 .root {
   @include styles.styles-reset;
 
-  display: flex;
   color: awsui.$color-text-avatar;
   block-size: $avatar-size;
   inline-size: $avatar-size;
-  align-items: center;
-  justify-content: center;
   position: relative;
-  overflow: hidden;
   @include mixins.border-radius-avatar;
 
   &.avatar-color-default {
@@ -32,11 +28,27 @@ $avatar-size: 28px;
 
   &.initials {
     font-family: awsui.$font-family-base;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: awsui.$font-size-body-s;
+    line-height: awsui.$line-height-body-s;
   }
 
-  @include focus-visible.when-visible {
-    outline: 2px solid awsui.$color-border-item-focused;
+  &:focus {
+    outline: none;
+
+    // https://github.com/cloudscape-design/board-components/blob/b380e14804f475554d7aecfdb82ffd1445774c68/src/internal/shared.scss#L4
+    // to be copied in the new repo
+    // create bar raising wed task to move mixins to component-toolkit
+    @include focus-visible.when-visible {
+      @include styles.focus-highlight(1px, 50%);
+    }
   }
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  block-size: inherit;
+  inline-size: inherit;
+  overflow: hidden;
 }
